[package]
name = "my-app"
version = "0.1.0"
edition = "2021"
# for learning wgpu

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26.1"
env_logger = "0.9.0"
image = "0.23"
cgmath = "0.18"
log = "0.4"
pollster = "0.2"
wgpu_glyph = "0.16"
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"